--- a/style.css
+++ b/style.css
@@ -1,108 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 :root {
-    --background: #0d0f10;
-    --background-alt: #101314;
-    --text: #d1cdc8;
-    --accent: #371f96;
+  --background: #0d0f10;
+  --background-alt: #101314;
+  --text: #d1cdc8;
+  --accent: #371f96;
+  --tile-border: 10px;
+  --tile-gap: 30px;
 }
-
-/*** The new CSS Reset - version 1.2.0 (last updated 23.7.2021) ***/
-
-
-/* Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property */
-
-*:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
-    all: unset;
-    display: revert;
-}
-
-
-/* Preferred box-sizing value */
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-
-/*
-  Remove list styles (bullets/numbers)
-  in case you use it with normalize.css
-*/
-
-ol,
-ul {
-    list-style: none;
-}
-
-
-/* For images to not be able to exceed their container */
-
-img {
-    max-width: 100%;
-}
-
-
-/* Removes spacing between cells in tables */
-
-table {
-    border-collapse: collapse;
-}
-
-
-/* Revert the 'white-space' property for textarea elements on Safari */
-
-textarea {
-    white-space: revert;
-}
-
-/* End of reset  */
 
 body {
-    color: var(--text);
-    background-color: var(--background);
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    text-align: center;
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('');
-    padding-top: 42vh;
+  color: var(--text);
+  background-color: var(--background);
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
+  min-height: 100dvh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('');
+  /*padding-top: 42vh;*/
 }
 
-#search{
-    text-align: left;
-    width: 800px;
-    padding: 10px 20px;
-    margin-bottom: 40px;
+h1 {
+  font-size: 2rem;
+  padding-top: 6dvh;
 }
 
-.tile{
-    margin: 10px;
-    border-radius: 10px;
-    background-color: #222222a0;
-    backdrop-filter: blur(18px);
-    border-top: 1px solid hsla(0, 0%, 100%, 0.145);
-    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075), 0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
-    transition: 0.3s;
+#wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  min-height: 100dvh;
 }
 
-.tile:hover{
-    background-color: #444444a0;
-    backdrop-filter: blur(12px);
-    transition: 0.3s;
+#search {
+  margin: 0;
+  text-align: left;
+  width: 100%;
+  padding: 16px 20px;
+  margin: var(--tile-gap) 0;
 }
 
-.tiles{
-    display: flex;
-    justify-content: center;
-    gap: 12px;
+.tile {
+  margin: 0;
+  border-radius: var(--tile-border);
+  background-color: #222222a0;
+  backdrop-filter: blur(18px);
+  border-top: 1px solid hsla(0, 0%, 100%, 0.145);
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075), 0 8px 8px hsl(0deg 0% 0% / 0.075),
+    0 16px 16px hsl(0deg 0% 0% / 0.075);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
 
-.tiles .tile{
-    width: 90px;
-    padding: 10px;
-    aspect-ratio: 1/1;
+.tile:hover {
+  background-color: #444444a0;
+  backdrop-filter: blur(12px);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.tiles {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-gap: var(--tile-gap);
+}
+
+.tiles .tile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 90px;
+  padding: 10px;
+  aspect-ratio: 1/1;
+}
+
+.tile a {
+  width: 100%;
+  height: 100%;
+}
+
+.tile img {
+  aspect-ratio: 1/1;
+  border-radius: var(--tile-border);
+}
+
+@media screen and (max-width: 1080px) {
+  #search {
+    width: 100%;
+  }
+
+  .tiles {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5vw 10vh;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #search {
+    width: 100%;
+    padding: 16px 16px;
+  }
+
+  .tiles {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px var(--tile-gap);
+  }
 }
