--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h3 {
 #wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   padding: 16px;
   min-height: 100dvh;
@@ -62,6 +62,15 @@ header {
   gap: 8dvh;
 }
 
+footer {
+  width: 100%;
+  height: 36dvh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 8px;
+}
+
 #search {
   margin: 0;
   text-align: left;
@@ -72,6 +81,16 @@ header {
 
 header .tile {
   padding: 16px;
+}
+
+footer .tile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 4px;
+  min-width: 34px;
+  min-height: 34px;
 }
 
 .time {
@@ -117,7 +136,8 @@ header .tile {
   aspect-ratio: 1/1;
 }
 
-.tiles .tile:hover {
+.tiles .tile:hover,
+footer .tile:hover {
   cursor: pointer;
 }
 
@@ -148,6 +168,10 @@ header .tile {
 }
 
 @media screen and (max-width: 1080px) {
+  footer {
+    height: 20dvh;
+  }
+
   #search {
     width: 100%;
   }
@@ -159,6 +183,10 @@ header .tile {
 }
 
 @media screen and (max-width: 768px) {
+  footer {
+    height: 24dvh;
+  }
+
   #search {
     width: 100%;
     padding: 16px;
