--- a/style.css
+++ b/style.css
@@ -93,6 +93,34 @@ footer .tile {
   min-height: 34px;
 }
 
+footer .tile:hover {
+  justify-content: right;
+  min-width: 128px;
+}
+
+.tile:hover .hover {
+  display: inherit;
+  color: inherit;
+  letter-spacing: 0px;
+  padding: 0 4px;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+
+.hover {
+  display: block;
+  color: #00000000;
+  letter-spacing: -8px;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
 .time {
   width: 28rem;
 }
@@ -118,6 +146,10 @@ footer .tile {
   backdrop-filter: blur(var(--tile-blur-hover));
   -webkit-backdrop-filter: blur(var(--tile-blur-radius));
   transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
 }
 
 .tiles {
